source/sass/blocks/custom-swiper.scss
.swiper-reviews {
  @include vp-1200 {
    padding: 0 45px;
  }

  @include vp-767 {
    padding: 0;
  }
}

.swiper-programs {
  @include vp-1200 {
    padding: 6px 45px 0;
  }

  @include vp-767 {
    padding: 0;
  }
}

.swiper-news {
  width: 100%;

  @include vp-767 {
    width: calc(100% - 30px);
  }
}

.swiper-scrollbar {
  width: 91%;
  height: 2px;
  top: auto;
  bottom: 10px;
  left: 0;
  background-color: rgba(49, 109, 194, 0.2);

  @include vp-1200 {
    width: 83%;
  }

  @include vp-767 {
    display: none;
  }
}

.swiper-button-next,
.swiper-button-prev {
  position: absolute;
  top: auto;
  bottom: 5px;
  width: 22px;
  height: 22px;
  background-color: $color-transparent;
  border: none;
  z-index: 10;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;

  @include vp-1200 {
    bottom: 0;
  }

  &--programs {
    bottom: 0;

    @include vp-767 {
      top: 22px;
      bottom: auto;
    }
  }

  svg {
    stroke: $color-bright;
  }

  &:not(:disabled):hover,
  &:not(:disabled):focus-visible {
    background-color: $color-default-white;
    outline: none;
    border-radius: 50%;
  }

  &:not(:disabled):active svg {
    opacity: 0.7;
  }

  &:disabled svg {
    stroke: $color-disabled;
  }
}

.swiper-button-prev {
  &--programs {
    right: 132px;

    @include vp-1200 {
      right: 77px;
    }

    @include vp-767 {
      right: 45px;
    }
  }

  &--news {
    left: 0;

    @include vp-1200 {
      bottom: 5px;
    }
  }

  &--reviews {
    right: 132px;
    bottom: 0;

    @include vp-1200 {
      right: 78px;
    }

    @include vp-767 {
      right: 46px;
      bottom: auto;
      top: 22px;
    }
  }
}

.swiper-button-next {
  &--programs {
    right: 100px;
    transform: rotate(180deg);

    @include vp-1200 {
      right: 45px;
    }

    @include vp-767 {
      right: 15px;
    }
  }

  &--news {
    right: 0;
    transform: rotate(180deg);

    @include vp-1200 {
      bottom: 5px;
    }
  }

  &--reviews {
    right: 100px;
    transform: rotate(180deg);
    bottom: 0;

    @include vp-1200 {
      right: 45px;
    }

    @include vp-767 {
      right: 15px;
      bottom: auto;
      top: 22px;
    }
  }
}

.swiper-pagination {
  &--hero {
    background-color: $color-default-white;
    border-radius: 20px 20px 0 0;
    padding: 11px 20px;

    @include vp-767 {
      padding: 5px 16px 7px;
      border-radius: 12px 12px 0 0;
    }

    &::before {
      @include angle;
      bottom: 0;
      transform: rotate(270deg);
    }
  }

  &--news {
    display: flex;
    justify-content: center;
  }
}

.pagination-bullet {
  &--hero {
    margin-right: 12px;

    @include vp-767 {
      width: 8px;
      height: 8px;
    }

    &:last-child {
      margin-right: 0;
    }

    &:focus,
    &:focus-visible,
    &:focus-within {
      outline: none;
    }
  }

  &--news {
    background-color: $color-transparent;
    border: none;
    padding: 10px 12px;
    width: 32px;
    height: 32px;
    margin-right: 20px;
    color: $color-bright;
    font-family: $font-regular;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 20px;
    opacity: 0.5;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;

    @include vp-767 {
      width: 26px;
      height: 26px;
      font-size: 13px;
      margin-right: 16px;
    }

    &:last-child {
      margin-right: 0;
    }

    &.swiper-pagination-bullet-active {
      background-color: $color-bright;
      color: $color-default-white;
      opacity: 1;
    }

    &:hover,
    &:focus-visible {
      background-color: $color-transparent;
      box-shadow: inset 0 0 0 1px $color-bright;
      outline: none;
      opacity: 1;
      color: $color-bright;
    }

    &:active {
      background-color: $color-dark-bright;
      color: $color-default-white;
      opacity: 1;
    }
  }
}

